misc: add hideImages testing code (stable), nonfunctional tick boxes

--- a/popup.html
+++ b/popup.html
@@ -91,6 +91,30 @@
           click it to remove it from the list.
         </span>
   </div>
+      <label>
+        <input style="margin-top: 10px;" type="checkbox" id="hide-images-checkbox">
+        Hide Images
+      </label>
+      <br>
+      <label>
+        <input style="margin-top: 10px;" type="checkbox" id="hide-preview-checkbox">
+        Hide Description-Preview
+      </label>
+      <br>
+      <label>
+        <input disabled="true" style="margin-top: 10px;" type="checkbox" id="remove-colors-checkbox">
+        Black/White Mode
+      </label>
+      <br>
+      <label>
+        <input style="margin-top: 10px;" type="checkbox" id="hide-categories-checkbox">
+        Hide Category-Banner
+      </label>
+      <br>
+      <label>
+        <input disabled="true" style="margin-top: 10px;" type="checkbox" id="autorefresh-checkbox">
+        Auto-Refresh (30s)
+      </label>
   <h4>List of blocked keywords:</h4>
   <ul id="keywords-list">
   </ul>
