feat: add working display Image toggle

--- a/popup.html
+++ b/popup.html
@@ -93,7 +93,7 @@
   </div>
       <label>
         <input style="margin-top: 10px;" type="checkbox" id="hide-images-checkbox">
-        Hide Images
+        Show Images
       </label>
       <br>
       <label>
