feat!: fixes #3, also adds bw, category, preview options

--- a/popup.html
+++ b/popup.html
@@ -93,7 +93,7 @@
   </div>
       <label>
         <input style="margin-top: 10px;" type="checkbox" id="hide-images-checkbox">
-        Show Images
+        Hide Images
       </label>
       <br>
       <label>
@@ -102,7 +102,7 @@
       </label>
       <br>
       <label>
-        <input disabled="true" style="margin-top: 10px;" type="checkbox" id="remove-colors-checkbox">
+        <input style="margin-top: 10px;" type="checkbox" id="remove-colors-checkbox">
         Black/White Mode
       </label>
       <br>
