fix: remove hdie preview feature, remove url match exclusion

--- a/popup.html
+++ b/popup.html
@@ -131,11 +131,11 @@
       <input class="checkbox" type="checkbox" id="hide-images-checkbox">
       Hide Images
       </label>
-      <br>
+<!--      <br>
       <label>
       <input class="checkbox" type="checkbox" id="hide-preview-checkbox">
       Hide Description-Preview
-      </label>
+      </label> -->
       <br>
       <label>
       <input class="checkbox" type="checkbox" id="remove-colors-checkbox">
