feat: improve checkbox label

--- a/popup.html
+++ b/popup.html
@@ -144,7 +144,7 @@
       <br>
       <label>
         <input class="checkbox" type="checkbox" id="disable-filter-checkbox">
-        Enable Keyword-Filter
+        Enable Keyword-Filter <span style="font-size: x-small;">(refresh page to undo filtering)</span>
       </label>
       <div id="keywordComponent">
           <h4>List of blocked keywords:</h4>
